# BOOKHUB-PROJECT

./: .gitignore  BOOKHUB.db  FAVOURITES.db  README.md  USERS.db  pyproject.toml  updates to make
API/: main.py
BOOKS/: books.py  test_add_books.py
BOOKS/VALIDATION_FOR_BOOKS/: add_book_validator.py  book_details_validator.py  get_all_books_validator.py  get_books_response.py  search_book_using_title.py
DATABASES/: book_database.py  book_hub_users_database.py  favourite_book_database.py
ENDPOINT_VALIDATIONS/: add_book_validator.py  book_details_validator.py  delete_book_validator.py  get_all_books_validator.py  search_book_using_title.py  update_book_validator.py  update_book_validator_with_id.py
FAVOURITES/: user_favourites.py
MODELS_FOR_DATABASES/: book_database.py  book_hub_user_related_database.py  model_for_book_database.py  model_for_favs_database.py  model_for_users_database.py  models_for_user_related_database.py
USERS/: users.py
USERS/VALIDATION_FOR_USER/: user_login_cred.py  user_logout.py
VALIDATION_FOR_BOOKS/: update_book_validator.py
VALIDATION_FOR_USER/: new_user.py
